app/src/test/resources/programs/invalid/conditionals/incorrectVariableScopeInThenBlock.exe
// Incorrect variable scope in 'then' block
foo main() -> Int = {
    if true then {
        let x: Int = 5
    }
    x
}
